Colab用コード実装

--- a/notebooks/exp_resnet.ipynb
+++ b/notebooks/exp_resnet.ipynb
@@ -144,8 +144,8 @@
     "memo = \"ResNet50 Baseline - Prototype method\"\n",
     "\n",
     "# run_name\n",
-    "run_name = get_run_name(model_type=\"resnet50_baseline\")\n",
-    "# run_name = 'resnet50_proto_202512131934'  # 既存runを使う場合\n",
+    "# run_name = get_run_name(model_type=\"resnet50_baseline\")\n",
+    "run_name = 'resnet50_baseline_202512132023'  # 既存runを使う場合\n",
     "\n",
     "print(f\"Run name: {run_name}\")\n",
     "print(f\"Memo: {memo}\")"
