--- a/notebooks/exp_knn_colab.ipynb
+++ b/notebooks/exp_knn_colab.ipynb
@@ -43,16 +43,8 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "source": [
     "## 4. Gitクローン"
@@ -61,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +61,7 @@
     "import os\n",
     "\n",
     "# ★ここを自分のリポジトリURLに変更★\n",
-    "GITHUB_REPO = \"https://github.com/YOUR_USERNAME/atma_22_ca.git\"\n",
+    "GITHUB_REPO = \"https://github.com/snoopy0420/atma_22_ca.git\"\n",
     "PROJECT_NAME = \"atma_22_ca\"\n",
     "\n",
     "# Git clone（初回のみ）\n",
@@ -82,6 +74,16 @@
     "\n",
     "# プロジェクトディレクトリに移動\n",
     "%cd /content/{PROJECT_NAME}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls ./data/raw/"
    ]
   },
   {
@@ -100,7 +102,7 @@
    "outputs": [],
    "source": [
     "# 必要パッケージのインストール\n",
-    "!pip install -q scikit-learn pandas numpy matplotlib seaborn tqdm"
+    "!pip install -r requirements.txt"
    ]
   },
   {
