--- a/notebooks/exp_knn_cloud.ipynb
+++ b/notebooks/exp_knn_cloud.ipynb
@@ -31,7 +31,7 @@
    "id": "2",
    "metadata": {},
    "source": [
-    "## 2. Google Drive マウント"
+    "## 4. Git pull"
    ]
   },
   {
@@ -40,14 +40,34 @@
    "id": "3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# # プロジェクトディレクトリの設定\n",
+    "# import os\n",
+    "\n",
+    "# # ★ここを自分のリポジトリURLに変更★\n",
+    "# GITHUB_REPO = \"https://github.com/snoopy0420/atma_22_ca.git\"\n",
+    "# PROJECT_NAME = \"atma_22_ca\"\n",
+    "\n",
+    "# # Git clone（初回のみ）\n",
+    "# if not os.path.exists(f\"/content/{PROJECT_NAME}\"):\n",
+    "#     !git clone {GITHUB_REPO} /content/{PROJECT_NAME}\n",
+    "#     print(f\"✅ Cloned {GITHUB_REPO}\")\n",
+    "# else:\n",
+    "#     print(f\"⚠️ {PROJECT_NAME} already exists. Pulling latest changes...\")\n",
+    "#     !cd /content/{PROJECT_NAME} && git pull\n",
+    "\n",
+    "# # プロジェクトディレクトリに移動\n",
+    "# %cd /content/{PROJECT_NAME}"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 4. Gitクローン"
+    "!git pull origin main"
    ]
   },
   {
@@ -56,39 +76,11 @@
    "id": "5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# プロジェクトディレクトリの設定\n",
-    "import os\n",
-    "\n",
-    "# ★ここを自分のリポジトリURLに変更★\n",
-    "GITHUB_REPO = \"https://github.com/snoopy0420/atma_22_ca.git\"\n",
-    "PROJECT_NAME = \"atma_22_ca\"\n",
-    "\n",
-    "# Git clone（初回のみ）\n",
-    "if not os.path.exists(f\"/content/{PROJECT_NAME}\"):\n",
-    "    !git clone {GITHUB_REPO} /content/{PROJECT_NAME}\n",
-    "    print(f\"✅ Cloned {GITHUB_REPO}\")\n",
-    "else:\n",
-    "    print(f\"⚠️ {PROJECT_NAME} already exists. Pulling latest changes...\")\n",
-    "    !cd /content/{PROJECT_NAME} && git pull\n",
-    "\n",
-    "# プロジェクトディレクトリに移動\n",
-    "%cd /content/{PROJECT_NAME}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!ls ./data/raw/"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "source": [
     "## 2. パッケージインストール"
@@ -97,80 +89,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 必要パッケージのインストール\n",
-    "!pip install -r requirements.txt"
+    "!pip install -r ../requirements.txt"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
-   "metadata": {},
-   "source": [
-    "## 3. rclone セットアップ（初回のみ）"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rcloneインストール\n",
-    "!curl https://rclone.org/install.sh | sudo bash\n",
-    "\n",
-    "# バージョン確認\n",
-    "!rclone version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rclone設定（初回のみ実行）\n",
-    "# 以下のコマンドを実行して、Google Driveを設定してください\n",
-    "# remote名は \"gdrive\" を推奨\n",
-    "\n",
-    "!rclone config"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "12",
-   "metadata": {},
-   "source": [
-    "## 5. データ同期（rclone）"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ★Google Driveのパスを設定★\n",
-    "GDRIVE_DATA_PATH = \"gdrive:atma22/data\"\n",
-    "\n",
-    "# データをダウンロード（初回のみ / 更新があった場合のみ同期）\n",
-    "!rclone sync {GDRIVE_DATA_PATH} /content/{PROJECT_NAME}/data --progress\n",
-    "\n",
-    "print(\"\\n✅ Data sync completed\")\n",
-    "\n",
-    "# データ確認\n",
-    "!ls -lh data/raw/input/atmaCup22_metadata/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "14",
+   "id": "8",
    "metadata": {},
    "source": [
     "## 6. モジュールインポート"
@@ -179,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +120,7 @@
     "from datetime import datetime\n",
     "\n",
     "# プロジェクトルートをパスに追加\n",
-    "sys.path.append('/content/atma_22_ca')\n",
+    "sys.path.append('/workspace/atma_22_ca/')\n",
     "\n",
     "from configs.config import *\n",
     "from src.runner import Runner\n",
@@ -205,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "10",
    "metadata": {},
    "source": [
     "## 7. ロガー設定"
@@ -214,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,12 +155,12 @@
     "    run_name = run_name + suffix\n",
     "    return run_name\n",
     "\n",
-    "logger.info(\"Logger initialized on Colab\")"
+    "logger.info(\"Logger initialized on runpod\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "12",
    "metadata": {},
    "source": [
     "## 8. データ読み込み"
@@ -240,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "14",
    "metadata": {},
    "source": [
     "## 9. パラメータ設定（GPU最適化）"
@@ -270,15 +199,110 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "memo = \"ResNet50 + KNN on Colab GPU\"\n",
-    "run_name = get_run_name(\"resnet50_knn_colab\")\n",
+    "memo = \"ResNet50 + KNN on runpod\"\n",
+    "run_name = get_run_name(\"resnet50_knn_runpod\")\n",
     "\n",
     "print(f\"Run name: {run_name}\")\n",
     "print(f\"Memo: {memo}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KNNモデルパラメータ（CPU/GPU自動判定）\n",
+    "import torch\n",
+    "\n",
+    "# デバイス確認\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "print(f\"Device: {device}\")\n",
+    "\n",
+    "params = {\n",
+    "    'model_name': 'resnet50',\n",
+    "    \n",
+    "    # KNN固有パラメータ\n",
+    "    'k': 5,\n",
+    "    \n",
+    "    # 閾値設定\n",
+    "    'threshold': 0.5,\n",
+    "    'min2_threshold': 0.3,\n",
+    "    \n",
+    "    # バッチサイズ（CPUなら小さめ、GPUなら大きめ）\n",
+    "    'batch_size': 64 if device == 'cuda' else 32,\n",
+    "    'num_workers': 4 if device == 'cuda' else 2,\n",
+    "    \n",
+    "    # キャッシュ設定\n",
+    "    'use_cache': True,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17",
+   "metadata": {},
+   "source": [
+    "## 10. CV設定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CV設定\n",
+    "cv_setting = {\n",
+    "    'method': 'group',  # 'group' (推奨) or 'stratified_group'\n",
+    "    'group_col': 'group',  # 上で作成したquarter_session列\n",
+    "    'n_splits': 5,\n",
+    "    # 注: GroupKFoldはshuffleパラメータなし（時系列順を保つ）\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19",
+   "metadata": {},
+   "source": [
+    "## 11. Runner作成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runnerの作成\n",
+    "runner = Runner(\n",
+    "    run_name=run_name,\n",
+    "    model_cls=ModelResNet50KNN,\n",
+    "    params=params,\n",
+    "    df_train=df_train,\n",
+    "    df_test=df_test,\n",
+    "    cv_setting=cv_setting,\n",
+    "    logger=logger\n",
+    ")\n",
+    "\n",
+    "print(f\"\\nRunner created: {run_name}\")\n",
+    "print(f\"Model class: {ModelResNet50KNN.__name__}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21",
+   "metadata": {},
+   "source": [
+    "## 12. 5-Fold CV学習（GPU高速化）"
    ]
   },
   {
@@ -288,21 +312,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GPU最適化パラメータ\n",
-    "params = {\n",
-    "    'model_name': 'resnet50',\n",
-    "    'k': 5,\n",
-    "    'threshold': 0.5,\n",
-    "    'min2_threshold': 0.3,\n",
-    "    'batch_size': 64,  # GPUならバッチサイズ大きめ\n",
-    "    'num_workers': 2,  # Colabでは2推奨\n",
-    "    'use_cache': True,\n",
-    "}\n",
+    "%%time\n",
+    "# 5-fold CV学習\n",
+    "# ⚠️ 初回実行時は特徴抽出に時間がかかります（CPU: 1-2時間, GPU: 20-30分）\n",
+    "# 2回目以降はキャッシュを使用するため高速です（数分）\n",
     "\n",
-    "print(\"\\n=== KNN Parameters (GPU optimized) ===\")\n",
-    "print(f\"  k: {params['k']}\")\n",
-    "print(f\"  batch_size: {params['batch_size']} (GPU)\")\n",
-    "print(f\"  num_workers: {params['num_workers']}\")"
+    "scores = runner.train_cv()\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(f\"CV Score (Macro F1): {np.mean(scores):.5f} ± {np.std(scores):.5f}\")\n",
+    "print(\"=\"*80)"
    ]
   },
   {
@@ -310,7 +329,7 @@
    "id": "23",
    "metadata": {},
    "source": [
-    "## 10. CV設定"
+    "## 13. テストデータ予測"
    ]
   },
   {
@@ -320,88 +339,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv_strategy = {\n",
-    "    'method': 'GroupKFold',\n",
-    "    'n_splits': 5,\n",
-    "    'shuffle': False,\n",
-    "    'random_state': 42\n",
-    "}\n",
-    "\n",
-    "print(\"=== CV Strategy ===\")\n",
-    "print(f\"  Method: {cv_strategy['method']}\")\n",
-    "print(f\"  N splits: {cv_strategy['n_splits']}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "25",
-   "metadata": {},
-   "source": [
-    "## 11. Runner作成"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "runner = Runner(\n",
-    "    run_name=run_name,\n",
-    "    model_cls=ModelResNet50KNN,\n",
-    "    params=params,\n",
-    "    cv_strategy=cv_strategy,\n",
-    "    logger=logger\n",
-    ")\n",
-    "\n",
-    "print(f\"Runner created: {run_name}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "27",
-   "metadata": {},
-   "source": [
-    "## 12. 5-Fold CV学習（GPU高速化）"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
-    "# 5-fold CV学習（GPUで高速化）\n",
-    "scores = runner.train_cv(\n",
-    "    df_train, \n",
-    "    groups=df_train['group'].values\n",
-    ")\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*80)\n",
-    "print(f\"CV Score (Macro F1): {np.mean(scores):.5f} ± {np.std(scores):.5f}\")\n",
-    "print(\"=\"*80)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29",
-   "metadata": {},
-   "source": [
-    "## 13. テストデータ予測"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "pred_test = runner.predict_cv(df_test)\n",
+    "# CV全モデルのアンサンブル予測\n",
+    "pred_test = runner.predict_cv()\n",
     "\n",
     "print(f\"\\nTest predictions shape: {pred_test.shape}\")\n",
     "print(f\"\\nPrediction distribution:\")\n",
@@ -409,8 +349,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 予測分布の可視化\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "pred_test['label_id'].value_counts().sort_index().plot(kind='bar')\n",
+    "plt.title('Test Prediction Distribution (KNN - Local)')\n",
+    "plt.xlabel('Label ID')\n",
+    "plt.ylabel('Count')\n",
+    "plt.axhline(y=len(pred_test)/11, color='r', linestyle='--', alpha=0.5, label='Uniform')\n",
+    "plt.legend()\n",
+    "plt.grid(axis='y', alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "26",
    "metadata": {},
    "source": [
     "## 14. 提出ファイル作成"
@@ -419,10 +379,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 提出ファイル保存\n",
     "submission_path = runner.save_submission(pred_test, run_name)\n",
     "\n",
     "print(f\"\\n✅ Submission file saved: {submission_path}\")\n",
@@ -432,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "28",
    "metadata": {},
    "source": [
     "## 15. kチューニング実験（高速）"
@@ -441,14 +402,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# kの値を変えて予測（類似度キャッシュ再利用で高速）\n",
     "k_values = [3, 5, 7, 10, 15]\n",
     "k_results = []\n",
     "\n",
-    "print(\"=== Testing different k values ===\")\n",
+    "print(\"\\n=== Testing different k values ===\")\n",
+    "print(\"(Using cached similarities for fast tuning)\\n\")\n",
     "\n",
     "for k in k_values:\n",
     "    predictions_list = []\n",
@@ -488,88 +451,54 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "35",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 16. 結果をGoogle Driveにバックアップ"
+    "# kとunknown比率の関係を可視化\n",
+    "if len(k_results) > 0:\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.plot(df_k_results['k'], df_k_results['unknown_ratio'], marker='o', linewidth=2)\n",
+    "    plt.xlabel('k (Number of neighbors)', fontsize=12)\n",
+    "    plt.ylabel('Unknown Ratio (%)', fontsize=12)\n",
+    "    plt.title('KNN: Effect of k on Unknown Predictions (Local)', fontsize=14)\n",
+    "    plt.grid(alpha=0.3)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ★バックアップ先のパスを設定★\n",
-    "GDRIVE_BACKUP_PATH = \"gdrive:atma22\"\n",
-    "\n",
-    "# モデル・ログ・提出ファイルをバックアップ\n",
-    "print(\"=== Backing up results to Google Drive ===\")\n",
-    "\n",
-    "!rclone sync /content/{PROJECT_NAME}/models {GDRIVE_BACKUP_PATH}/models --progress\n",
-    "!rclone sync /content/{PROJECT_NAME}/logs {GDRIVE_BACKUP_PATH}/logs --progress\n",
-    "!rclone sync /content/{PROJECT_NAME}/data/submission {GDRIVE_BACKUP_PATH}/data/submission --progress\n",
-    "!rclone sync /content/{PROJECT_NAME}/data/features {GDRIVE_BACKUP_PATH}/data/features --progress\n",
-    "\n",
-    "print(\"\\n✅ Backup completed!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37",
-   "metadata": {},
-   "source": [
-    "## 17. Git push（オプション）"
+    " "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "32",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# ソースコードに変更がある場合はコミット\n",
-    "# ※大容量ファイル（models, data）はGitに含めない\n",
-    "\n",
-    "%cd /content/{PROJECT_NAME}\n",
-    "\n",
-    "# 状態確認\n",
-    "!git status\n",
-    "\n",
-    "# コミット・プッシュ（必要に応じて実行）\n",
-    "# !git add src/ notebooks/\n",
-    "# !git commit -m \"Add KNN experiment results from Colab\"\n",
-    "# !git push"
-   ]
+   "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "39",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
    "metadata": {},
-   "source": [
-    "## まとめ\n",
-    "\n",
-    "### ✅ 実行完了内容\n",
-    "1. GPU環境でKNN学習（高速化）\n",
-    "2. 5-fold CV評価\n",
-    "3. テストデータ予測\n",
-    "4. kチューニング実験\n",
-    "5. Google Driveへバックアップ\n",
-    "\n",
-    "### 📊 次のステップ\n",
-    "- ローカルで結果を確認（rclone sync）\n",
-    "- Prototype法との比較\n",
-    "- EfficientNet-B0で再実験\n",
-    "- アンサンブル実装"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -583,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
