--- a/notebooks/exp_knn_local.ipynb
+++ b/notebooks/exp_knn_local.ipynb
@@ -137,6 +137,7 @@
     "\n",
     "# run_name\n",
     "run_name = get_run_name(model_type=\"resnet50_knn_local\")\n",
+    "run_name = \"resnet50_knn_local_202512141406\"\n",
     "\n",
     "print(f\"Run name: {run_name}\")"
    ]
@@ -157,18 +158,14 @@
     "\n",
     "params = {\n",
     "    'model_name': 'resnet50',\n",
-    "    \n",
     "    # KNN固有パラメータ\n",
     "    'k': 5,\n",
-    "    \n",
     "    # 閾値設定\n",
     "    'threshold': 0.5,\n",
     "    'min2_threshold': 0.3,\n",
-    "    \n",
     "    # バッチサイズ（CPUなら小さめ、GPUなら大きめ）\n",
     "    'batch_size': 64 if device == 'cuda' else 32,\n",
     "    'num_workers': 4 if device == 'cuda' else 2,\n",
-    "    \n",
     "    # キャッシュ設定\n",
     "    'use_cache': True,\n",
     "}"
@@ -229,8 +226,177 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = runner.build_model(i_fold=0)\n",
+    "model.load_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_features = model._extract_features_batch(df_test, split='test')\n",
+    "\n",
+    "# 類似度計算（子クラスで実装）\n",
+    "similarities = model._compute_similarities(test_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIR_IMAGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set(similarities.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src import dataset_image\n",
+    "import importlib\n",
+    "importlib.reload(dataset_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.dataset_image import BasketballDataset, get_transforms\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "# BasketballDatasetの動作確認\n",
+    "\n",
+    "# テスト用に小さいサンプルを取得\n",
+    "sample_df = df_train.head(20).copy()\n",
+    "\n",
+    "# Dataset作成（学習用transform）\n",
+    "dataset_train = BasketballDataset(\n",
+    "    df=sample_df,\n",
+    "    transform=get_transforms(is_train=True),\n",
+    "    is_train=True,\n",
+    ")\n",
+    "\n",
+    "# Dataset作成（評価用transform）\n",
+    "dataset_val = BasketballDataset(\n",
+    "    df=sample_df,\n",
+    "    transform=get_transforms(is_train=False),\n",
+    "    is_train=False,\n",
+    ")\n",
+    "\n",
+    "print(f\"✅ Dataset created successfully\")\n",
+    "print(f\"  Train dataset size: {len(dataset_train)}\")\n",
+    "print(f\"  Val dataset size: {len(dataset_val)}\")\n",
+    "\n",
+    "# 1サンプル取得して確認\n",
+    "image, label = dataset_train[0]\n",
+    "\n",
+    "print(f\"\\n✅ Sample data:\")\n",
+    "print(f\"  Image shape: {image.shape}\")\n",
+    "print(f\"  Image dtype: {image.dtype}\")\n",
+    "print(f\"  Label: {label}\")\n",
+    "\n",
+    "# 画像の値の範囲確認（正規化されているか）\n",
+    "print(f\"\\n✅ Image statistics:\")\n",
+    "\n",
+    "print(f\"  Min: {image.min():.3f}\")\n",
+    "print(f\"  Max: {image.max():.3f}\")\n",
+    "print(f\"  Mean: {image.mean():.3f}\")\n",
+    "print(f\"  Std: {image.std():.3f}\")\n",
+    "\n",
+    "# DataLoaderでバッチ処理が正常に動作するか確認\n",
+    "\n",
+    "dataloader = DataLoader(\n",
+    "    dataset_train,\n",
+    "    batch_size=4,\n",
+    "    shuffle=False,\n",
+    "    num_workers=0  # 確認用に0に設定\n",
+    ")\n",
+    "\n",
+    "batch_images, batch_labels = next(iter(dataloader))\n",
+    "\n",
+    "print(f\"\\n✅ DataLoader batch:\")\n",
+    "print(f\"  Batch images shape: {batch_images.shape}\")\n",
+    "print(f\"  Batch labels shape: {batch_labels.shape}\")\n",
+    "\n",
+    "print(f\"\\n✅ All checks passed! BasketballDataset is working correctly.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next(iter(dataloader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25",
    "metadata": {},
    "source": [
     "## 7. 5-Fold CV学習"
@@ -239,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,8 +422,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. 評価（OOF）\n",
+    "fold_scores, oof_score = runner.metric_cv()\n",
+    "\n",
+    "print(f\"OOF Score: {oof_score:.5f}\")\n",
+    "print(f\"Fold Scores: {fold_scores}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "28",
    "metadata": {},
    "source": [
     "## 8. テストデータ予測"
@@ -266,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "31",
    "metadata": {},
    "source": [
     "## 9. 提出ファイル作成"
@@ -310,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "33",
    "metadata": {},
    "source": [
     "## 10. kのチューニング実験"
@@ -333,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "36",
    "metadata": {},
    "source": [
     "## 11. 閾値チューニング実験"
@@ -411,7 +591,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "40",
    "metadata": {},
    "source": [
     "## 12. まとめ\n",
