feat: 日本語のログ出力を追加し、キャッシュ機能を強化
- .github/copilot-instructions.md:
  - ログ出力や標準出力は日本語で記載することを明記。

- notebooks/exp_knn_cloud.ipynb:
  - 環境確認のセクション名を「環境構築」に変更。
  - GPU確認のコードを追加し、GPU最適化のパラメータ設定を実装。
  - 各セクションのIDを整理し、コードの可読性を向上。

- src/feature_cache.py:
  - キャッシュのsplit引数を「train」から「train, valid, test」に変更。

- src/model_resnet_base.py:
  - 特徴抽出メソッドを修正し、キャッシュ機能を強化。
  - ログ出力を日本語に変更。

- src/model_resnet_knn.py:
  - KNNモデルの学習時のログ出力を日本語に変更。
  - モデル保存時に特徴量をキャッシュから読み込むように修正。

- src/runner.py:
  - ログ出力を日本語に変更し、CV設定や学習状況の出力を改善。
  - 各foldの予測サンプル数の確認を追加し、エラーハンドリングを強化。

--- a/notebooks/exp_knn_cloud.ipynb
+++ b/notebooks/exp_knn_cloud.ipynb
@@ -5,13 +5,25 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "## 1. 環境確認"
+    "## 1. 環境構築"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install nbstripout\n",
+    "%cd atma_22_ca\n",
+    "!nbstripout --install"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "source": [
     "## 4. Git pull"
@@ -37,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,14 +85,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "## 2. パッケージインストール"
@@ -89,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "## 6. モジュールインポート"
@@ -108,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +130,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from datetime import datetime\n",
+    "import torch\n",
     "\n",
     "# プロジェクトルートをパスに追加\n",
     "sys.path.append('/workspace/atma_22_ca/')\n",
@@ -134,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "## 7. ロガー設定"
@@ -143,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "## 8. データ読み込み"
@@ -169,19 +182,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train = pd.read_csv(os.path.join(DIR_INPUT, 'atmaCup22_metadata', 'train_meta.csv'))\n",
     "df_test = pd.read_csv(os.path.join(DIR_INPUT, 'atmaCup22_metadata', 'test_meta.csv'))\n",
     "\n",
-    "print(f\"Train: {df_train.shape}\")\n",
-    "print(f\"Test: {df_test.shape}\")\n",
-    "\n",
     "# グループ化\n",
     "df_train['group'] = df_train['quarter'] + '_' + df_train['session'].astype(str)\n",
     "\n",
+    "\n",
+    "print(f\"Train: {df_train.shape}\")\n",
+    "print(f\"Test: {df_test.shape}\")\n",
     "print(f\"\\n【CV Strategy】\")\n",
     "print(f\"  Group column: 'group' (quarter_session)\")\n",
     "print(f\"  Total groups: {df_train['group'].nunique()}\")\n",
@@ -190,24 +203,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
-   "metadata": {},
-   "source": [
-    "## 9. パラメータ設定（GPU最適化）"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "15",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "memo = \"ResNet50 + KNN on runpod\"\n",
-    "run_name = get_run_name(\"resnet50_knn_runpod\")\n",
+    "## 9. パラメータ設定（GPU最適化）\n",
     "\n",
-    "print(f\"Run name: {run_name}\")\n",
-    "print(f\"Memo: {memo}\")"
+    "### GPU最適化の戦略\n",
+    "NVIDIA A40 (46GB VRAM) を活用した高速化：\n",
+    "\n",
+    "**実装済み最適化**\n",
+    "1. **batch_size**: 64 → 256 (4倍)\n",
+    "   - VRAM容量が十分なため大幅増加\n",
+    "   - 1バッチあたりの処理効率が向上\n",
+    "   \n",
+    "2. **num_workers**: 4 → 8 (2倍)\n",
+    "   - CPU並列データローディング\n",
+    "   - GPU待ち時間を削減\n",
+    "   \n",
+    "3. **persistent_workers**: True\n",
+    "   - ワーカープロセスを再利用\n",
+    "   - epoch/fold間のオーバーヘッド削減\n",
+    "   \n",
+    "4. **prefetch_factor**: 2\n",
+    "   - 次のバッチを事前ロード\n",
+    "   - GPU idle時間を最小化\n",
+    "   \n",
+    "5. **non_blocking=True**\n",
+    "   - GPU転送を非同期化\n",
+    "   - CPU-GPU間の並列実行\n",
+    "\n",
+    "**期待される高速化**\n",
+    "- 特徴抽出: 約3-4倍高速化\n",
+    "- 全体の学習時間: 20-30分 → 5-10分程度"
    ]
   },
   {
@@ -217,47 +244,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# KNNモデルパラメータ（CPU/GPU自動判定）\n",
-    "import torch\n",
-    "\n",
-    "# デバイス確認\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "print(f\"Device: {device}\")\n",
-    "\n",
-    "params = {\n",
-    "    'model_name': 'resnet50',\n",
-    "    \n",
-    "    # KNN固有パラメータ\n",
-    "    'k': 5,\n",
-    "    \n",
-    "    # 閾値設定\n",
-    "    'threshold': 0.5,\n",
-    "    'min2_threshold': 0.3,\n",
-    "    \n",
-    "    # バッチサイズ（CPUなら小さめ、GPUなら大きめ）\n",
-    "    'batch_size': 64 if device == 'cuda' else 32,\n",
-    "    'num_workers': 4 if device == 'cuda' else 2,\n",
-    "    \n",
-    "    # キャッシュ設定\n",
-    "    'use_cache': True,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17",
-   "metadata": {},
-   "source": [
-    "## 10. CV設定"
+    "memo = \"ResNet50 + KNN on runpod\"\n",
+    "run_name = get_run_name(\"resnet50_knn_runpod\")\n",
+    "# run_name = \"resnet50_knn_runpod_202512180257\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# デバイス確認\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "print(f\"Device: {device}\")\n",
+    "\n",
+    "# GPU最適化パラメータ\n",
+    "if device == 'cuda':\n",
+    "    # GPU仕様を確認\n",
+    "    gpu_name = torch.cuda.get_device_name(0)\n",
+    "    gpu_memory = torch.cuda.get_device_properties(0).total_memory / 1024**3  # GB\n",
+    "    print(f\"GPU: {gpu_name}, Memory: {gpu_memory:.1f}GB\")\n",
+    "    \n",
+    "    # A40/A100など大容量GPUの場合\n",
+    "    if gpu_memory > 20:\n",
+    "        batch_size = 256  # 大幅増加（64 → 256）\n",
+    "        num_workers = 8   # ワーカー数増加（4 → 8）\n",
+    "    else:\n",
+    "        batch_size = 128\n",
+    "        num_workers = 6\n",
+    "else:\n",
+    "    batch_size = 32\n",
+    "    num_workers = 2\n",
+    "\n",
+    "print(f\"最適化パラメータ: batch_size={batch_size}, num_workers={num_workers}\")\n",
+    "\n",
+    "# モデルパラメータ設定\n",
+    "params = {\n",
+    "    'model_name': 'resnet50',\n",
+    "    # KNN固有パラメータ\n",
+    "    'k': 5,\n",
+    "    # 閾値設定\n",
+    "    'threshold': 0.5,\n",
+    "    'min2_threshold': 0.3,\n",
+    "    # GPU最適化パラメータ\n",
+    "    'batch_size': batch_size,\n",
+    "    'num_workers': num_workers,\n",
+    "    # キャッシュ設定\n",
+    "    'use_cache': True,\n",
+    "}\n",
+    "\n",
     "# CV設定\n",
     "cv_setting = {\n",
     "    'method': 'group',  # 'group' (推奨) or 'stratified_group'\n",
@@ -269,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "source": [
     "## 11. Runner作成"
@@ -278,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "source": [
     "## 12. 5-Fold CV学習（GPU高速化）"
@@ -308,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,16 +354,38 @@
     "# ⚠️ 初回実行時は特徴抽出に時間がかかります（CPU: 1-2時間, GPU: 20-30分）\n",
     "# 2回目以降はキャッシュを使用するため高速です（数分）\n",
     "\n",
-    "scores = runner.train_cv()\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*80)\n",
-    "print(f\"CV Score (Macro F1): {np.mean(scores):.5f} ± {np.std(scores):.5f}\")\n",
-    "print(\"=\"*80)"
+    "runner.train_cv()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "# 5-fold 評価"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores, oof_score = runner.metric_cv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25",
    "metadata": {},
    "source": [
     "## 13. テストデータ予測"
@@ -335,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "28",
    "metadata": {},
    "source": [
     "## 14. 提出ファイル作成"
@@ -379,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "30",
    "metadata": {},
    "source": [
     "## 15. kチューニング実験（高速）"
@@ -402,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -490,7 +549,127 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": []
